--- a/oraclejetconfig.json
+++ b/oraclejetconfig.json
@@ -6,8 +6,7 @@
       "hybrid": "src-hybrid",
       "javascript": "js",
       "typescript": "ts",
-      "styles": "css",
-      "themes": "themes"
+      "styles": "css"
     },
     "staging": {
       "web": "web",
