--- a/oraclejetconfig.json
+++ b/oraclejetconfig.json
@@ -5,8 +5,7 @@
       "web": "src-web",
       "hybrid": "src-hybrid",
       "javascript": "js",
-      "typescript": "ts",
-      "styles": "css"
+      "typescript": "ts"
     },
     "staging": {
       "web": "web",
